syntax = "proto3";
package comdex.collector.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/collector/v1beta1/params.proto";
import "comdex/collector/v1beta1/collector.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/comdex-official/comdex/x/collector/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex-official/comdex/collector/params";
  }
  rpc QueryCollectorLookupByApp(QueryCollectorLookupByAppRequest) returns (QueryCollectorLookupByAppResponse) {
    option (google.api.http).get = "/comdex/collector/v1beta1/collector-lookup-by-app/{app_id}";
  };
  rpc QueryCollectorLookupByAppAndAsset(QueryCollectorLookupByAppAndAssetRequest) returns (QueryCollectorLookupByAppAndAssetResponse) {
    option (google.api.http).get = "/comdex/collector/v1beta1/collector-lookup-by-app-and-asset/{app_id}/{asset_id}";
  };
  rpc QueryCollectorDataByAppAndAsset(QueryCollectorDataByAppAndAssetRequest) returns (QueryCollectorDataByAppAndAssetResponse) {
    option (google.api.http).get = "/comdex/collector/v1beta1/collector-data-by-app-and-asset/{app_id}/{asset_id}";
  };
  rpc QueryAuctionMappingForAppAndAsset(QueryAuctionMappingForAppAndAssetRequest) returns (QueryAuctionMappingForAppAndAssetResponse) {
    option (google.api.http).get = "/comdex/collector/v1beta1/auction-data-by-app-and-asset/{app_id}/{asset_id}";
  };
  rpc QueryNetFeeCollectedForAppAndAsset(QueryNetFeeCollectedForAppAndAssetRequest) returns (QueryNetFeeCollectedForAppAndAssetResponse) {
    option (google.api.http).get = "/comdex/collector/v1beta1/net-fee-data-by-app-and-asset/{app_id}/{asset_id}";
  };

}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}


message QueryCollectorLookupByAppRequest {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}
message QueryCollectorLookupByAppResponse {
  repeated CollectorLookupTable collectorLookup = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"collectorLookup\""];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];

}
message QueryCollectorLookupByAppAndAssetRequest {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  uint64 asset_id = 2 [(gogoproto.moretags) = "yaml:\"asset_id\""];
}
message QueryCollectorLookupByAppAndAssetResponse {
  CollectorLookupTable collectorLookup = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"collectorLookup\""];

}

message QueryCollectorDataByAppAndAssetRequest {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  uint64 asset_id = 2 [(gogoproto.moretags) = "yaml:\"asset_id\""];
}
message QueryCollectorDataByAppAndAssetResponse {
  CollectorData collectorData = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"collectorData\""];

}

message QueryAuctionMappingForAppAndAssetRequest {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  uint64 asset_id = 2 [(gogoproto.moretags) = "yaml:\"asset_id\""];
}
message QueryAuctionMappingForAppAndAssetResponse {
  AssetIdToAuctionLookupTable assetIdToAuctionLookupTable = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"assetIdToAuctionLookupTable\""];

}

message QueryNetFeeCollectedForAppAndAssetRequest {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  uint64 asset_id = 2 [(gogoproto.moretags) = "yaml:\"asset_id\""];
}
message QueryNetFeeCollectedForAppAndAssetResponse {
  AssetIdToFeeCollected assetIdToFeeCollected = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"assetIdToFeeCollected\""];

}